--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
+        env:
+          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
         with:
           charts_dir: helm-charts/autopilot
           packages_with_index: true
