--- a/helm-charts/autopilot/templates/serviceaccount.yaml
+++ b/helm-charts/autopilot/templates/serviceaccount.yaml
@@ -30,7 +30,7 @@ rules:
   verbs: ["get", "list"]
 - apiGroups: ["batch"]
   resources: ["jobs"]
-  verbs: ["get", "list", "create", "delete"]
+  verbs: ["get", "list", "create"]
 - apiGroups: [""]
   resources: ["nodes"]
   verbs: ["list", "get", "patch"]
