--- a/helm-charts/autopilot/templates/serviceaccount.yaml
+++ b/helm-charts/autopilot/templates/serviceaccount.yaml
@@ -24,7 +24,7 @@ metadata:
 rules:
 - apiGroups: [""]
   resources: ["endpoints"]
-  verbs: ["get", "list"]
+  verbs: ["get", "list", "patch"]
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get", "list"]
