--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -34,6 +34,8 @@ jobs:
 
       - name: Install Helm
         uses: azure/setup-helm@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.6.0
@@ -42,6 +44,8 @@ jobs:
         with:
           charts_dir: helm-charts
           packages_with_index: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+      
 
   
 
