--- a/helm-charts/autopilot/templates/serviceaccount.yaml
+++ b/helm-charts/autopilot/templates/serviceaccount.yaml
@@ -36,7 +36,7 @@ rules:
   verbs: ["list", "get", "patch"]
 - apiGroups: ["apps"]
   resources: ["daemonsets"]
-  verbs: ["list", "get"]
+  verbs: ["list", "get", "create"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
