--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -6,9 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    tags: '*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -45,6 +43,7 @@ jobs:
           charts_dir: helm-charts
           packages_with_index: true
           token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
       
 
   
