--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -41,6 +41,7 @@ jobs:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           CR_SKIP_EXISTING: true
         with:
+          pages_branch: gh-pages
           charts_dir: helm-charts
           packages_with_index: true
           token: ${{ secrets.GITHUB_TOKEN }}
