--- a/helm-charts/autopilot/templates/serviceaccount.yaml
+++ b/helm-charts/autopilot/templates/serviceaccount.yaml
@@ -1,52 +1,71 @@
-{{- if .Values.namespace.create -}}
-kind: Namespace
-apiVersion: v1
+{{ if .Capabilities.APIVersions.Has "security.openshift.io/v1" -}}
+kind: SecurityContextConstraints
+apiVersion: security.openshift.io/v1
 metadata:
-  labels:
-    openshift.io/cluster-monitoring: "true"
-  name: {{ .Values.namespace.name }}
-spec:
-  finalizers:
-  - kubernetes
-{{- end }}
+  name: scc-autopilot
+allowPrivilegedContainer: true
+runAsUser:
+  type: RunAsAny
+seLinuxContext:
+  type: RunAsAny
+fsGroup:
+  type: RunAsAny
+supplementalGroups:
+  type: RunAsAny
+users:
+- system:serviceaccount:{{ .Release.Namespace }}:autopilot
+allowedCapabilities:
+- 'NET_RAW'
+- 'NET_ADMIN'
+volumes:
+- configMap
+- csi
+- downwardAPI
+- emptyDir
+- ephemeral
+- hostPath
+- persistentVolumeClaim
+- projected
+- secret
+{{ end -}}
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: autopilot
-  namespace: {{ .Values.namespace.name  }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: autopilot
-  namespace: {{ .Values.namespace.name  }}
 rules:
 - apiGroups: [""]
   resources: ["endpoints"]
-  verbs: ["get", "list", "patch"]
+  verbs: ["get", "list"]
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["get", "list"]
 - apiGroups: ["batch"]
   resources: ["jobs"]
-  verbs: ["get", "list", "create", "delete"]
+  verbs: ["get", "list", "create"]
 - apiGroups: [""]
   resources: ["nodes"]
-  verbs: ["list", "get", "patch"]
+  verbs: ["list", "get", "patch", "watch"]
 - apiGroups: ["apps"]
   resources: ["daemonsets"]
-  verbs: ["list", "get", "create"]
+  verbs: ["list", "get"]
+- apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["list", "get", "create", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: autopilot 
-  namespace: {{ .Values.namespace.name  }}
 subjects:
 - kind: ServiceAccount
+  namespace: {{ .Release.Namespace }}
   name: autopilot 
-  namespace: {{ .Values.namespace.name  }} 
 roleRef: 
   kind: ClusterRole
   name: autopilot 
