--- a/.github/workflows/helm-and-quay.yml
+++ b/.github/workflows/helm-and-quay.yml
@@ -71,4 +71,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: autopilot-daemon
+          push: true
           tags: ${{ env.CHART_VERSION }}    
