--- a/.github/workflows/helm-and-quay.yml
+++ b/.github/workflows/helm-and-quay.yml
@@ -57,7 +57,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: quay.io/talos/test
+          images: quay.io/talos/autopilot
           tags: ${{ env.CHART_VERSION }}
       
       - name: Log into registry 
@@ -72,4 +72,4 @@ jobs:
         with:
           context: autopilot-daemon
           push: true
-          tags: ${{ env.CHART_VERSION }}    
+          tags: ${{ steps.meta.outputs.tags }}
